Name:                foo
Version:             0.0
Cabal-Version:       >= 1.2
Synopsis:            
Category:            
Description:
  What's it about?
  .
  Project wiki page: <http://haskell.org/haskellwiki/foo>
  .
  The module documentation pages have links to colorized source code and
  to wiki pages where you can read and contribute user comments.  Enjoy!
  .
  &#169; 2008 by Conal Elliott; BSD3 license.
Author:              Conal Elliott 
Maintainer:          conal@conal.net
Homepage:            http://haskell.org/haskellwiki/foo
Package-Url:         http://code.haskell.org/foo
Copyright:           (c) 2008 by Conal Elliott
License:             BSD3
Stability:           experimental
build-type:          Simple

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base
  Exposed-Modules:     
                       
  ghc-options:         -Wall

--  ghc-prof-options:    -prof -auto-all 
